cluster/one/wolfi2.yml
apiVersion: v1
kind: Pod
metadata:
  name: wolfi2
spec:
  volumes:
  - name: hd1
    persistentVolumeClaim:
      claimName: hd1
  containers:
  - name: wolfi
    image: cgr.dev/chainguard/wolfi-base 
    tty: true
    stdin: true
    ports:
    - containerPort: 80
      name: http
    volumeMounts:
    - name: hd1
      mountPath: "/home"
