cluster/one/fastify.yml
apiVersion: v1
kind: Service
metadata:
  name: fastify
spec:
  selector:
    app: fastify
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastify
  labels:
    app: fastify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastify
  template:
    metadata:
      labels:
        app: fastify
    spec:
      containers:
      - name: fastify
        image: 63061/l-js-fastify-first:latest
        ports:
        - containerPort: 8000
