cluster/one/solidstart.yml
apiVersion: v1
kind: Service
metadata:
  name: solidstart
spec:
  selector:
    app: solidstart
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solidstart
  labels:
    app: solidstart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solidstart
  template:
    metadata:
      labels:
        app: solidstart
    spec:
      containers:
      - name: solidstart
        image: 63061/l-js-solidstart-chess:latest
        ports:
        - containerPort: 3000
