cluster/one/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
  - host: tt15551.cc
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fastify
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solidstart
            port:
              number: 3000
  - host: grafana.tt15551.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-ext
            port:
              number: 3000
